- Added more custom resolution, to be set using +set r_mode mode_number
 - Mode 12: 1280x800 (wide)
 - Mode 13: 1440x900 (wide)
 - Mode 14: 1366x768 (wide)
 - Mode 15: 1680x1050 (wide)
 - Mode 16: 1920x1080 (wide)
 - Mode 17: 1920x1200 (wide)
 - Mode 18: 2560x1600 (wide)
- Add DEFAULT_BASEDIR support for packagers:
 - you have to export DEFAULT_BASEDIR from the shell before to do a make
*** CHANGES ***
- Reloading bug fixed by Joe Kari


Changes in SG 1.0-20081231
******************
*** CHANGES ***
- Updated Unix building process to support more processor kind
- Updated Makefile to produce binary libraries for unix
- Updated Makefile to produce sse, sse2 and smp binaries for unix
- Updated Unix building process to keep install & build folder in the source base
- Fix "OP_BLOCK_COPY not dword aligned" in the same way then an old ioQuake3 fix...


Changes since sg 0.9
******************
*** CHANGES ***
- Added .mak, .bat, .lnt, .vprj, .Conscript, .Makefile files from Tequila archive (Excluded a few)
- Fixed buildvm.bat and cleanvm.bat which weren't working due to reorganization
- Organized VC build solutions
- Removed old VC build solutions
- Created SSE and SSE2 build profiles for each solution
- Added lcc compiler toolchain back
- Added AL and unix files

Changes since sg 0.9
******************
*** CHANGES ***
- Copyright updated.
- Source license header audit completed.
- Removed .mak, .bat, .lnt, .vprj, Construct, Makefile files (Waiting for "working" sets to be comitted)
- Removed code/macosx (Old project was for pre-XCode and the current state of code excludes Intel)
- Removed code/unix (Waiting for "working" sets to be comitted)
- Updated Win32 project files for Visual Studio / C++ 2008 (VC9)

Changes since wq3 b2.2
******************

*** NEW ***
- Gamename is now "smokinguns"
- guid & pickup item and damages are now logged (Thanks, Tequila)
- g_allowVoteKick : New server side cvar to allow or not vote kick

*** CHANGES ***